plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'com.google.cloud.tools.jib' version '3.4.4'
}

group = 'it.cnr.anac.transparency'
description = 'Servizio per l\'applicazione delle regole relative al D.Lgs. n. 33-2013 Trasparenza nella PA'

version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2023.0.3")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework:spring-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-config'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	implementation 'org.apache.commons:commons-text:1.12.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	def lombokGroup = 'org.projectlombok', lombokVersion = '1.18.30'
	compileOnly group: lombokGroup, name: 'lombok', version: lombokVersion
	annotationProcessor group: lombokGroup, name: 'lombok', version: lombokVersion

	def mapstructGroup = 'org.mapstruct', mapstructVersion = '1.5.5.Final'
	implementation group: mapstructGroup, name: 'mapstruct', version: mapstructVersion
	annotationProcessor group: mapstructGroup, name: 'mapstruct-processor', version: mapstructVersion

	def luceneGroup = 'org.apache.lucene', luceneVersion = '9.11.1'
	implementation group: luceneGroup, name: 'lucene-core', version: luceneVersion
	implementation group: luceneGroup, name: 'lucene-queryparser', version: luceneVersion
	implementation group: luceneGroup, name: 'lucene-suggest', version: luceneVersion
	implementation group: luceneGroup, name: 'lucene-analysis-common', version: luceneVersion

	implementation 'org.jsoup:jsoup:1.16.2'

	implementation 'commons-codec:commons-codec:1.16.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}
jib {
	from {
		image = "eclipse-temurin:17-jre@sha256:4d1030a58659e0fdd77bf0880f28095344f37785d020527340caf937c49e3098"
	}
	container {
		entrypoint = ['/bin/sh', '-c', 'exec java $JAVA_OPTS -cp $( cat /app/jib-classpath-file ) $( cat /app/jib-main-class-file )']
	}
}